# rustbin

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustbin.db  rustbin.toml  schema.sql
.github/workflows/: ci.yml
rustbin-frontend/: package-lock.json  package.json  svelte.config.js
rustbin-frontend/src/routes/: +page.svelte
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  todo.txt
src/routes/: bin.rs  health.rs  mod.rs
src/tasks/: cleanup.rs  limit.rs  mod.rs
src/utils/: uuid.rs
src/websocket/: mod.rs
tests/: integration_tests.rs  websocket_tests.rs
