[package]
name = "rustbin"
version = "1.0.0"
edition = "2024"
description = "A fast, self-hostable request bin for debugging webhooks and HTTP requests"
repository = "https://github.com/YOUR_USERNAME/rustbin"
license = "MIT"
keywords = ["webhook", "http", "debugging", "request-bin", "axum"]
categories = ["web-programming", "development-tools"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower_governor = { version = "0.4", features = ["axum"] }
governor = "0.6.3"
tokio-tungstenite = "0.21"
futures = "0.3"
dashmap = "5"

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
tempfile = "3.0"
